members reg. implemented
including reactive search

--- a/client/templates/account-templates/uploadInput.html
+++ b/client/templates/account-templates/uploadInput.html
@@ -9,7 +9,7 @@
         <div class="form-group">
           <div class="form-group fileUpload btn btn-default btn-block btn-icon btn-file-upload">
               <span class="glyphicon glyphicon-upload"></span> Upload a profile photo
-              <input type="file" class="upload" placeholder="Upload a Picture"/>
+              <input type="file" class="upload js-Profile" placeholder="Upload a Picture"/>
           </div>
           <span class="help-block {{#unless hasError}}hide{{/unless}}">{{errorText}}</span>
         </div>
