--- a/client/templates/members/bibliographyMembers.html
+++ b/client/templates/members/bibliographyMembers.html
@@ -35,10 +35,10 @@
     <section id="services">
      <div class="container">  
 		{{#EasySearch.IfNoResults index=publicationsIndex}}
-			<h3>No results found!</h3>
+			<h3>No publications found!</h3>
 		{{/EasySearch.IfNoResults}}
 
-			{{#EasySearch.IfInputEmpty index=publicationsIndex}}
+		{{#EasySearch.IfInputEmpty index=publicationsIndex}}
 
 		<div class="table-responsive">
 			<table class="table table-striped table-hover">
