--- a/client/templates/header_footer/_footer.html
+++ b/client/templates/header_footer/_footer.html
@@ -30,7 +30,7 @@
                 </div>
             </div> -->
             <div class="row text-center">
-                <div class="col-md-12">
+                <div class="col-md-4 col-md-offset-8 text-right col-sm-12">
                     <ul class="list-inline quicklinks">
                         <li><span class="copyright">&copy; Open Strategy Network 2016</span></li>
                         <li><a class="imprint-link" href="imprint.html">Imprint</a></li>
