--- a/client/templates/header_footer/_header.html
+++ b/client/templates/header_footer/_header.html
@@ -11,7 +11,7 @@
 										<span class="icon-bar"></span>
 										<span class="icon-bar"></span>
 								</button>
-								<a class="navbar-brand" href="{{pathFor route = 'home'}}"><img src="img/osn_logo.svg" class="img-responsive" alt="Open Strategy Network"></a>
+								<a class="navbar-brand" href="{{pathFor route = 'home'}}"><img src="img/osn_logoneu.png" class="img-responsive" alt="Open Strategy Network"></a>
 						</div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -46,35 +46,9 @@
                                                 <li><p class="profile-username">Hello {{currentUser.profile.firstName}}</p></li>
                                                 <li role="separator" class="divider"></li>
                                                 <li><a class="profile-links" href="{{pathFor route = 'profileSettings'}}"><i class="fa fa-cog"></i>&nbsp; Settings</a></li>
-                                                <li><a href="#">Something else here</a></li>
-                                                <li><a href="#">Separated link</a></li>
-                                                <li><a href="#">One more separated link</a></li>
-                                             </ul>
-                                        </li>
-
-
-                                        <li class="dropdown">
-                                          <button type="button" href="#" class="dropdown-toggle btn-profile" data-toggle="dropdown">
-                                              <span class="glyphicon glyphicon-user"></span>PROFILE <span class="caret"></span>
-                                          </button>
-                                          <ul class="dropdown-menu" role="menu">
-                                              <li>
-                                                  <p class="profile-username">Hello {{currentUser.profile.firstName}}</p>
-                                              </li>
-                                              <li >
-                                                  <a class="profile-links" href="{{pathFor route = 'profileSettings'}}"><i class="fa fa-cog"></i>&nbsp; Settings</a>
-                                              </li>
-
-                                              <li>
-                                                  <a class="profile-links" href="{{pathFor route = 'adminNewsEventsList'}}"><i class="fa fa-lock"></i>&nbsp; News &amp; Events</a>
-                                              </li>
-                                              <li>
-                                                  <a class="profile-links" href="{{pathFor route = 'adminPublicationsList'}}"><i class="fa fa-lock"></i>&nbsp; Publications</a>
-                                              </li>
-
-                                               <li>
-                                                  <a class="profile-links" href="{{pathFor route = 'adminMembers'}}"><i class="fa fa-lock"></i>&nbsp; Members</a>
-                                              </li>
+                                                <li><a class="profile-links" href="{{pathFor route = 'adminNewsEventsList'}}"><i class="fa fa-lock"></i>&nbsp; News &amp; Events</a></li>
+                                                <li><a class="profile-links" href="{{pathFor route = 'adminPublicationsList'}}"><i class="fa fa-lock"></i>&nbsp; Publications</a></li>
+                                                <li><a class="profile-links" href="{{pathFor route = 'adminMembers'}}"><i class="fa fa-lock"></i>&nbsp; Members</a></li>
 
                                               {{#if isInRole 'admin'}}
                                               <!-- <li>
@@ -87,10 +61,8 @@
                                                   <a class="profile-links" href="{{pathFor route = 'adminMembers'}}"><i class="fa fa-lock"></i>&nbsp; Members</a>
                                               </li>-->
                                               {{/if}}
-                                              <li>
-                                                  <a class="profile-links js-logOut" data-action="logout"><i class="fa fa-sign-out"></i>&nbsp; Log out</a>
-                                              </li>
-                                          </ul>
+                                                <li><a class="profile-links js-logOut" data-action="logout"><i class="fa fa-sign-out"></i>&nbsp; Log out</a></li>
+                                            </ul>
                                         </li>
                     {{/unless}}
 								</ul>
