Polish Navbar-height and Profile-Button, Join-us Icons Redesign, Header-Redesign

--- a/client/templates/account-templates/joinus.html
+++ b/client/templates/account-templates/joinus.html
@@ -23,7 +23,7 @@
         <div class="row text-center extra-spacing-top extra-spacing-bottom joinus-icons">
             <div class="col-sm-4">
                 <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
                     <i class="fa fa-bullhorn fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">Advantage</h4>
@@ -31,7 +31,7 @@
             </div>
             <div class="col-sm-4">
                 <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i> -->
                     <i class="fa fa-comments-o fa-stack-1x fa-inverse joinus-icons"></i>
                 </span>
                 <h4 class="service-heading">Advantage</h4>
@@ -39,7 +39,7 @@
             </div>
             <div class="col-sm-4">
                 <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i> -->
                     <i class="fa fa-newspaper-o fa-stack-1x fa-inverse"></i>
                 </span>
                 <h4 class="service-heading">Advantage</h4>
