Header Redesign, Join us Redesign

--- a/client/templates/account-templates/joinus.html
+++ b/client/templates/account-templates/joinus.html
@@ -9,7 +9,7 @@
             <li class="active">Join us</li>
         </ol><!-- End of Breadcrumb -->
         <div class="header-content-inner">
-            <h1>Join us</h1>
+            <h1>YOUR BENEFITS</h1>
             <hr>
             <h2>As a member of OSN you will become part of a thriving network of scholars interested in open strategy. There are many advantages of joining the OSN. Registration is free.</h2>
             <button type="button" href="#joinus" class="btn btn-primary btn-xl page-scroll js-scrollToForm">JOIN US</button>
@@ -26,15 +26,15 @@
                     <!-- <i class="fa fa-circle fa-stack-2x"></i> -->
                     <i class="fa fa-bullhorn fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="service-heading">Advantage</h4>
-                <p class="text-muted">Submit news to the whole Open Strategy community and disseminate related research findings.</p>
+                <!-- <h4 class="service-heading">Advantage</h4> -->
+                <p class="text-muted">As a member you can submit news to the whole Open Strategy community and disseminate related research findings.</p>
             </div>
             <div class="col-sm-4">
                 <span class="fa-stack fa-4x">
                     <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i> -->
                     <i class="fa fa-comments-o fa-stack-1x fa-inverse joinus-icons"></i>
                 </span>
-                <h4 class="service-heading">Advantage</h4>
+                <!-- <h4 class="service-heading">Advantage</h4> -->
                 <p class="text-muted">Cooperate internationally by searching for data on OSN members.</p>
             </div>
             <div class="col-sm-4">
@@ -42,7 +42,7 @@
                     <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i> -->
                     <i class="fa fa-newspaper-o fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="service-heading">Advantage</h4>
+                <!-- <h4 class="service-heading">Advantage</h4> -->
                 <p class="text-muted">Search for Open Strategy literature on specific topics within the Bibliography</p>
             </div>
         </div>
