--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -35,7 +35,7 @@ body {
 
 hr {
 		max-width: 50px;
-		border-color: @brand-primary-light;
+		border-color: white;
 		border-width: 2px;
 		margin-bottom: 20px;
 		margin-top: 15px;
@@ -126,7 +126,7 @@ hr.layer-light {
 
 a.breadcrumb-link {
 		font-size: 12px;
-		color: @brand-primary;
+		color: @brand-primary-light;
 }
 
 a.breadcrumb-link:link {
@@ -1543,7 +1543,7 @@ section.layer-login {
 .joinus-icons .fa-stack-1x{
 		font-size: 65px;
         margin-top: 0;
-        color: @brand-primary-light;
+        color: @gray-light;
 }
 
 
